[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/LoginAndRegister.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Menus/Register/RegisterForm.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Menus/Login/LoginForm.tscn" type="PackedScene" id=4]

[node name="LoginAndRegister" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginForm" parent="." instance=ExtResource( 4 )]
visible = false

[node name="RegisterForm" parent="." instance=ExtResource( 2 )]
[connection signal="login_pressed" from="LoginForm" to="." method="_on_LoginForm_login_pressed"]
[connection signal="open" from="LoginForm" to="LoginForm" method="_on_open"]
[connection signal="register_pressed" from="LoginForm" to="." method="_on_LoginForm_register_pressed"]
[connection signal="cancel_pressed" from="RegisterForm" to="." method="_on_RegisterForm_cancel_pressed"]
[connection signal="open" from="RegisterForm" to="RegisterForm" method="_on_open"]
[connection signal="register_pressed" from="RegisterForm" to="." method="_on_RegisterForm_register_pressed"]
